sdk/tests/snapshots/test_reader__reader_c_jpg.snap
---
source: sdk/tests/test_reader.rs
expression: unescape_json(&reader.json())?
---
{
  "active_manifest": "[MANIFEST_URN]",
  "manifests": {
    "[MANIFEST_URN]": {
      "assertions": [
        {
          "data": {
            "@context": "http://schema.org/",
            "@type": "CreativeWork",
            "author": [
              {
                "@type": "Person",
                "name": "Adobe make_test"
              }
            ]
          },
          "kind": "Json",
          "label": "stds.schema-org.CreativeWork"
        },
        {
          "data": {
            "actions": [
              {
                "action": "c2pa.created",
                "digitalSourceType": "http://cv.iptc.org/newscodes/digitalsourcetype/algorithmicMedia",
                "parameters": {
                  "name": "gradient"
                },
                "softwareAgent": "Make Test Images 0.24.0"
              }
            ]
          },
          "label": "c2pa.actions"
        }
      ],
      "claim_generator": "make_test_images/0.24.0 c2pa-rs/0.24.0",
      "format": "image/jpeg",
      "ingredients": [],
      "instance_id": [XMP_ID]",
      "label": "[MANIFEST_URN]",
      "signature_info": {
        "alg": "Ps256",
        "cert_serial_number": "720724073027128164015125666832722375746636448153",
        "issuer": "C2PA Test Signing Cert",
        "time": "[TIMESTAMP1]"
      },
      "thumbnail": {
        "format": "image/jpeg",
        "identifier": "[JUMBF_URI]"
      },
      "title": "C.jpg"
    }
  }
}
