sdk/tests/snapshots/test_reader__reader_ca_jpg.snap
---
source: sdk/tests/test_reader.rs
expression: unescape_json(&reader.json())?
---
{
  "active_manifest": "[MANIFEST_URN]",
  "manifests": {
    "[MANIFEST_URN]": {
      "assertions": [
        {
          "data": {
            "@context": "http://schema.org/",
            "@type": "CreativeWork",
            "author": [
              {
                "@type": "Person",
                "name": "Adobe make_test"
              }
            ]
          },
          "kind": "Json",
          "label": "stds.schema-org.CreativeWork"
        },
        {
          "data": {
            "actions": [
              {
                "action": "c2pa.opened",
                "instanceId": "xmp.iid:813ee422-9736-4cdc-9be6-4e35ed8e41cb",
                "parameters": {
                  "ingredient": {
                    "hash": "tTBD4/E0R0AjLUdJFpsVz3lE/KJUq22Vz0UGqzhEpVs=",
                    "url": "[JUMBF_URI]"
                  }
                }
              },
              {
                "action": "c2pa.color_adjustments",
                "parameters": {
                  "name": "brightnesscontrast"
                }
              }
            ]
          },
          "label": "c2pa.actions"
        }
      ],
      "claim_generator": "make_test_images/0.24.0 c2pa-rs/0.24.0",
      "format": "image/jpeg",
      "ingredients": [
        {
          "document_id": "xmp.did:813ee422-9736-4cdc-9be6-4e35ed8e41cb",
          "format": "image/jpeg",
          "instance_id": "xmp.iid:813ee422-9736-4cdc-9be6-4e35ed8e41cb",
          "relationship": "parentOf",
          "thumbnail": {
            "format": "image/jpeg",
            "identifier": "[JUMBF_URI]"
          },
          "title": "A.jpg"
        }
      ],
      "instance_id": [XMP_ID]",
      "label": "[MANIFEST_URN]",
      "signature_info": {
        "alg": "Ps256",
        "cert_serial_number": "720724073027128164015125666832722375746636448153",
        "issuer": "C2PA Test Signing Cert",
        "time": "[TIMESTAMP1]"
      },
      "thumbnail": {
        "format": "image/jpeg",
        "identifier": "[JUMBF_URI]"
      },
      "title": "CA.jpg"
    }
  }
}
